--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "version": "0.0.0",
+  "author": "leumasic <leumasic@outlook.com>",
   "private": true,
   "workspaces": [
     "packages/*"
