--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ coverage
 .next/
 out/
 build
+dist
 
 # misc
 .DS_Store
@@ -31,3 +32,8 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+*.tgz
+
+.idea
+.vscode
