--- a/packages/azure-changeset-task/package.json
+++ b/packages/azure-changeset-task/package.json
@@ -1,7 +1,7 @@
 {
   "name": "azure-changeset-task",
   "version": "0.0.1",
-  "description": "Azure Task Equivalent to Changeset Github Action",
+  "description": "An Azure Pipeline Task to automate releases with Changesets",
   "author": "leumasic <leumasic@outlook.com>",
   "type": "module",
   "repository": {
@@ -17,6 +17,10 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^18.7.23"
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.7.23",
+    "@types/q": "^1.5.5",
+    "mocha": "^10.0.0",
+    "sync-request": "^6.1.0"
   }
 }
