--- a/packages/azure-changesets-task/package.json
+++ b/packages/azure-changesets-task/package.json
@@ -35,6 +35,7 @@
     "@manypkg/get-packages": "^1.1.3",
     "@octokit/rest": "^19.0.4",
     "fs-extra": "^10.1.0",
+    "mdast-util-to-string": "^3.1.0",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.2",
     "resolve-from": "^5.0.0",
