--- a/packages/azure-changesets-task/package.json
+++ b/packages/azure-changesets-task/package.json
@@ -19,12 +19,9 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.7.23",
     "@types/q": "^1.5.5",
-    "@types/semver": "^7.3.12",
-    "mocha": "^10.0.0",
-    "sync-request": "^6.1.0"
+    "@types/semver": "^7.3.12"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.6",
