--- a/packages/changesets-task/package.json
+++ b/packages/changesets-task/package.json
@@ -15,6 +15,9 @@
     "@types/q": "^1.5.5",
     "@types/semver": "^7.3.12"
   },
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.6",
     "@changesets/pre": "^1.0.12",
