--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "turbo run dev --parallel",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "package": "tfx extension create --root . --output-path dist --manifest-globs vss-extension.json"
   },
   "devDependencies": {
     "@changesets/cli": "^2.24.4",
