--- a/packages/changesets/package.json
+++ b/packages/changesets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "changesets-task",
+  "name": "changesets",
   "version": "0.0.1",
   "description": "An Azure Pipeline Task to automate releases with Changesets",
   "author": "leumasic <leumasic@outlook.com>",
@@ -7,7 +7,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/leumasic/azure-tasks.git",
-    "directory": "packages/changesets-task"
+    "directory": "packages/changesets"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
