chore: downgrade versions for node 10 compatibility

--- a/packages/changesets/tsconfig.json
+++ b/packages/changesets/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "include": ["index.ts"],
   "compilerOptions": {
-    "allowJs": true,
-    "lib": ["es2018"],
-    "module": "commonjs",
-    "target": "es2018"
+    "target": "es6",
+    "module": "commonjs"
   }
 }
