--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "package": "tfx extension create --root . --output-path dist --manifest-globs vss-extension.json"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.4",
+    "@types/node": "^8.10.61",
     "@changesets/cli": "^2.24.4",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
@@ -28,8 +30,7 @@
     "typescript": "^4.8.4"
   },
   "engines": {
-    "node": ">=16.12.0",
-    "pnpm": ">=7.9.5"
+    "node": ">=10.0.0 <11.0.0"
   },
   "packageManager": "pnpm@7.9.5"
 }
