--- a/packages/changesets/package.json
+++ b/packages/changesets/package.json
@@ -3,15 +3,12 @@
   "version": "0.0.2",
   "description": "An Azure Pipeline Task to automate releases with Changesets",
   "author": "leumasic <leumasic@outlook.com>",
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/leumasic/azure-tasks.git",
     "directory": "packages/changesets"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.7.23",
     "@types/q": "^1.5.5",
     "@types/semver": "^7.3.12"
   },
@@ -26,8 +23,8 @@
     "@changesets/write": "^0.2.0",
     "@manypkg/get-packages": "^1.1.3",
     "@octokit/rest": "^19.0.4",
-    "azure-pipelines-task-lib": "4.0.0-preview",
-    "fs-extra": "^10.1.0",
+    "azure-pipelines-task-lib": "^3.2.0",
+    "fs-extra": "^5.0.0",
     "mdast-util-to-string": "^3.1.0",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.2",
