--- a/packages/changesets/package.json
+++ b/packages/changesets/package.json
@@ -9,6 +9,7 @@
     "directory": "packages/changesets"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
     "@types/q": "^1.5.5",
     "@types/semver": "^7.3.12"
   },
@@ -26,6 +27,7 @@
     "azure-pipelines-task-lib": "^3.2.0",
     "fs-extra": "^5.0.0",
     "mdast-util-to-string": "^1.0.6",
+    "node-fetch": "^2.6.7",
     "remark-parse": "^7.0.1",
     "remark-stringify": "^7.0.3",
     "resolve-from": "^5.0.0",
