--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "typescript": "^4.8.4"
   },
   "engines": {
-    "node": ">=10.0.0 <11.0.0"
+    "node": ">=16.12.0",
+    "pnpm": ">=7.9.5"
   },
   "packageManager": "pnpm@7.9.5"
 }
